2011-03-24  Ilya Sherman  <isherman@chromium.org>

        Reviewed by Dimitri Glazkov.

        Expose Node::isFocusable() in the Chromium WebKit API
        In service of https://code.google.com/p/chromium/issues/detail?id=72918
        https://bugs.webkit.org/show_bug.cgi?id=56809

        * public/WebNode.h:
        * src/WebNode.cpp:
        (WebKit::WebNode::isFocusable):

2011-03-24  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: fix chromium compilation.

        * public/WebDevToolsAgent.h:

2011-03-24  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: brush up Network agent API.
        https://bugs.webkit.org/show_bug.cgi?id=57001

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::identifierForInitialRequest):
        (WebKit::WebDevToolsAgentImpl::willSendRequest):
        * src/WebDevToolsAgentImpl.h:

2011-03-24  Noel Gordon  <noel.gordon@gmail.com>

        Reviewed by Ojan Vafai.

        [chromium] WebBindings::getRangeImpl() should NULL check its NPObject argument
        https://bugs.webkit.org/show_bug.cgi?id=56996

        * src/WebBindings.cpp:
        (WebKit::getRangeImpl):

2011-03-23  Noel Gordon  <noel.gordon@gmail.com>

        Reviewed by Ojan Vafai.

        [chromium] WebBindings{.h,.cpp}: should use consistent argument naming
        https://bugs.webkit.org/show_bug.cgi?id=56898

        Address FIXME I noted/added in r81676.  Wanted to just copy/paste the checking
        code from elsewhere in the file, but inconsistent argument naming made it more
        difficult than it need be, so first step: use consistent naming.

        * public/WebBindings.h:
        * src/WebBindings.cpp:
        (WebKit::WebBindings::construct):
        (WebKit::WebBindings::enumerate):
        (WebKit::WebBindings::evaluate):
        (WebKit::WebBindings::evaluateHelper):
        (WebKit::WebBindings::getProperty):